--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,9 +18,11 @@ margin:8px;
 .pDescription {
   text-align: left;
   max-width: 270px;
+  margin:8px;
 }
 
 .h1Title {
   text-align: left;
   max-width: 270px;
+  margin:8px;
 }
